loopdowhile.Poucet1.scala.error
Erreur de compilation :
Poucet1:7: error: '(' expected but identifier found.
  if cell <= 2 right()
     ^Poucet1:9: error: illegal start of simple expression
}
^