loopdowhile.Poucet1.scala.code
var cell =0
for (j<-1 to 5){
  for (i<-1 to4 ) {
    forward()
    if (isOverBaggle()) cell+=1
  }
  if cell <= 2 right()
  else left()
}
forward()